import public "common_client.proto";
package ddproto;

// ProtoHeader 需要在每个 Message 中作为第一个字段

//统一下单 proto
//    总金额	total_fee	是	Int	888	订单总金额，单位为分，详见支付金额
message wxpay_req_unifiedorder {
    optional ProtoHeader header = 1;
    optional int32 meal = 2; //要充值的套餐id
}

//app请求统一下单之后，返回的加密字符串
message wxpay_ack_unifiedorder {
    optional ProtoHeader header = 1;
    optional string partnerId = 2; //商户号
    optional string prepay_id = 3; // 预付回话标志
    optional string nonce_str = 4; //维系返回的随机字符串
    optional string timeStamp = 5;
    optional string package = 6;
    optional string sign = 7; //签名
}